@@ -1,5 +1,7 @@
 DATE       AUTHOR       CHANGE
 ---------- ------------ -------------------------------------------------------
+2004-08-03 allenb       Refactored seg/tri intersection test to remove two
+                        un-needed divisions.
 2004-07-21 allenb       Refactored code for seg/line intersect with plane
                         to better handle border cases.
                         Added overloaded calls for Math::abs that call the
